--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://www.paypal.com/sdk/js?client-id=AenitTxnqbmr6fT8nw8wreV2rEmsaLA5pAOb01LwFSe1NN1vsJBGz3UXdFD2BfDGA7zoELVe9WDGirCl&currency=CAD"></script>
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Pedro</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
