--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script src="https://www.paypal.com/sdk/js?client-id=AenitTxnqbmr6fT8nw8wreV2rEmsaLA5pAOb01LwFSe1NN1vsJBGz3UXdFD2BfDGA7zoELVe9WDGirCl&currency=CAD"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=?"></script>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
